2002-04-22  Mo DeJong  <supermo@bayarea.net>

	* Makefile.in:
	* autogen.sh: Add new file.
	* config.h.in:
	* configure:
	* bitmaps/Makefile.in:
	* db/Makefile.in:
	* demo/Makefile.in:
	* doc/Makefile.in:
	* doc/html/Makefile.in:
	* etc/Makefile.in:
	* etc/sn_toolchains/Makefile.in:
	* gui/Makefile.in:
	* hyper/Makefile.in:
	* install/Makefile.in:
	* misc/Makefile.in:
	* misc/libutils/Makefile.in:
	* packages/Makefile.in:
	* parsers/Makefile.in:
	* parsers/assembly/Makefile.in:
	* parsers/chill/Makefile.in:
	* parsers/cobol/Makefile.in:
	* parsers/common/Makefile.in:
	* parsers/cpp/Makefile.in:
	* parsers/cpp/cpplib/Makefile.in:
	* parsers/fortran/Makefile.in:
	* parsers/gcj/Makefile.in:
	* parsers/java/Makefile.in:
	* parsers/libjcreuse/Makefile.in:
	* parsers/m4/Makefile.in:
	* parsers/python/Makefile.in:
	* parsers/sendmail/Makefile.in:
	* parsers/tcl/Makefile.in:
	* parsers/toolbox/Makefile.in:
	* sdk/Makefile.in:
	* sdk/api/Makefile.in:
	* sdk/api/c/Makefile.in:
	* sdk/api/c/database/Makefile.in:
	* sdk/api/c/database/examples/Makefile.in:
	* sdk/api/tcl/Makefile.in:
	* sdk/api/tcl/database/Makefile.in:
	* sdk/api/tcl/database/examples/Makefile.in:
	* sdk/api/tcl/misc/Makefile.in:
	* sdk/parsers/Makefile.in:
	* sdk/parsers/examples/Makefile.in:
	* sdk/parsers/examples/assembly/Makefile.in:
	* sdk/parsers/examples/elf/Makefile.in:
	* snavigator/Makefile.in:
	* snavigator/unix/Makefile.in:
	* snavigator/win/Makefile.in: Regen with net release of
	autoconf 2.13 and automake 1.4

2002-04-20  Mo DeJong  <supermo@bayarea.net>

	* gui/tclIndex: Add file that got
	ignored by the cvs import.

2002-04-19  Mo DeJong  <supermo@bayarea.net>

	* configure.in: Avoid setting HYPER_CONSOLE.
	* hyper/Makefile.am: Avoid using HYPER_CONSOLE
	when linking hyper.exe.
	* hyper/Makefile.in: Ditto.
	* hyper/win/winMain.c (WinMain, Tcl_AppInit):
	Use public Tk_CreateConsoleWindow instead of
	internal TkConsoleCreate and TkConsoleInit
	functions. This removes the need to link